add customer delete route
